--- a/.vscodeignore
+++ b/.vscodeignore
@@ -8,8 +8,11 @@ tsconfig.json
 vsc-extension-quickstart.md
 webpack.config.js
 **/*.map
+**/*.ts
 node_modules/@types/**
-node_modules/typescript/**
-node_modules/eslint/**
-node_modules/mocha/**
+node_modules/typescript/lib/tsserver.js
+node_modules/typescript/lib/typescriptServices.js
+node_modules/typescript/lib/typingsInstaller.js
+node_modules/typescript/lib/watchGuard.js
 node_modules/.bin/**
+!node_modules/typescript/lib/typescript.js
