feat: Migrate extension build process from direct TypeScript compilation to Webpack for bundling.
add: working extension build to releases

remove: extension builds with activation event problems

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,18 +1,12 @@
 .vscode/**
 .vscode-test/**
-out/test/**
+out/**
 src/**
+node_modules/**
 .gitignore
 .vscodeignore
 tsconfig.json
-vsc-extension-quickstart.md
 webpack.config.js
+vsc-extension-quickstart.md
 **/*.map
 **/*.ts
-node_modules/@types/**
-node_modules/typescript/lib/tsserver.js
-node_modules/typescript/lib/typescriptServices.js
-node_modules/typescript/lib/typingsInstaller.js
-node_modules/typescript/lib/watchGuard.js
-node_modules/.bin/**
-!node_modules/typescript/lib/typescript.js
